# PPOIS

./: FirstLab.sln
FirstLab/: FirstLab.cpp  FirstLab.vcxproj  FirstLab.vcxproj.filters  Matrix.cpp  Matrix.h
SecondLab/: Attribute.cpp  Attribute.h  CMakeLists.txt  Comment.cpp  Comment.h  Document.cpp  Document.h  Element.cpp  Element.h  ProcessingInstruction.cpp  ProcessingInstruction.h  TagElement.cpp  TagElement.h  TextElement.cpp  TextElement.h  XML.cpp  XmlPrinter.cpp  XmlPrinter.h  XmlReader.cpp  XmlReader.h  test.xml
